# aud_ats_core

./: CMakeLists.txt
ats_core/: CMakeLists.txt
ats_core/include/: ats.h
ats_core/include_private/: ats_t.h  versions.h
ats_core/src/: ats.cpp  ats_generic.cpp  versions.c
chrono/: CMakeLists.txt
chrono/include/: chrono.h  hist.h
chrono/include_private/: versions.h
chrono/src/: chrono.cpp  hist.cpp
